# novusai-saas

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/admin/: __init__.py  admins.py  auth.py  configs.py  permissions.py  plans.py  roles.py  tenants.py
backend/app/api/public/: __init__.py  tenant.py
backend/app/api/tenant/: __init__.py  admins.py  auth.py  configs.py  permissions.py  roles.py  settings.py
backend/app/api/v1/: __init__.py  auth.py
backend/app/configs/: __init__.py  meta.py  registry.py  service.py  sync.py
backend/app/configs/definitions/: __init__.py  groups.py
backend/app/configs/definitions/platform/: __init__.py  email.py  general.py  security.py
backend/app/configs/definitions/tenant/: __init__.py  branding.py  features.py  security.py
backend/app/core/: __init__.py  base_controller.py  base_model.py  base_repository.py  base_schema.py  base_service.py  config.py  database.py  deps.py  i18n.py  logging.py  query_parser.py  response.py  security.py
backend/app/enums/: __init__.py  base.py  billing.py  common.py  config.py  error_code.py  rbac.py  role.py
backend/app/exceptions/: __init__.py  base.py
backend/app/locales/: __init__.py
backend/app/locales/en/: menu.json  messages.json
backend/app/locales/zh_CN/: menu.json  messages.json
backend/app/middleware/: __init__.py  access_control.py  i18n.py  permission.py  tenant.py
backend/app/models/: __init__.py  user.py
backend/app/models/auth/: __init__.py  admin_role.py  permission.py  tenant_admin_role.py
backend/app/models/system/: __init__.py  admin.py  config.py
backend/app/models/tenant/: __init__.py  tenant.py  tenant_admin.py  tenant_domain.py  tenant_plan.py  tenant_user.py
backend/app/rbac/: __init__.py  decorators.py  deps.py  registry.py  sync.py
backend/app/rbac/menus/: __init__.py  admin_menus.py  tenant_menus.py
backend/app/rbac/services/: __init__.py  permission_service.py
backend/app/repositories/: __init__.py
backend/app/repositories/system/: __init__.py  admin_repository.py  admin_role_repository.py  tenant_repository.py
backend/app/repositories/tenant/: __init__.py  tenant_admin_repository.py  tenant_plan_repository.py  tenant_role_repository.py
backend/app/schemas/: __init__.py  auth.py  tenant_admin.py
backend/app/schemas/common/: __init__.py  auth.py  permission.py  query.py  select.py
backend/app/schemas/public/: __init__.py  tenant.py
backend/app/schemas/system/: __init__.py  admin.py  config.py  role.py  tenant.py
backend/app/schemas/tenant/: __init__.py  admin.py  domain.py  plan.py  role.py  user.py
backend/app/services/: __init__.py
backend/app/services/common/: __init__.py  auth_service.py  role_hierarchy_validator.py  role_tree_mixin.py
backend/app/services/system/: __init__.py  admin_role_service.py  admin_service.py  tenant_service.py
backend/app/services/tenant/: __init__.py  quota_service.py  tenant_admin_role_service.py  tenant_admin_service.py  tenant_plan_service.py  tenant_settings_service.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260111_0001_initial.py  20260112_0002_tenant_domains.py  20260113_0003_drop_admin_role_name_unique.py  20260114_0004_add_role_hierarchy.py  20260114_13da4a77114f_change_permission_unique_constraint_to_.py  20260115_bd94c7f44d6c_add_organization_fields_to_roles.py  20260116_0006_add_organization_root_nodes.py  20260116_3f669a3f2342_add_system_config_tables.py  20260116_migrate_tenant_settings.py  20260117_f785c12f1c4f_add_tenant_plan_tables.py
backend/tests/api/: README.md  __init__.py  base.py  config.py  run_all.py  test_admin_admins.py  test_admin_auth.py  test_admin_permissions.py  test_admin_plans.py  test_admin_roles.py  test_admin_tenants.py  test_tenant_admins.py  test_tenant_auth.py  test_tenant_roles.py
(+221 files in other folders)
